@startuml
!include ../style.puml
show interface members
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR_T4

Class "{abstract}\nCommand" as Command

abstract Parser <<Interface>>

class FilterClaimCommand

class DoneSessionPredicate

class FilterClaimCommandParser

Command <|-- FilterClaimCommand

Parser <|.. FilterClaimCommandParser

DoneSessionPredicate "1" <-- FilterClaimCommand
DoneSessionPredicate <.. FilterClaimCommandParser


@enduml

